--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -22,3 +22,25 @@ h3 { font-size: 1.1em; }
 #canvas {
 
 }
+
+#info {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    width: 230px;
+    height: auto;
+    z-index: 11000;
+}
+#info .notification {
+    padding: 10px 10px 10px 12px;
+    margin-bottom: 12px;
+    color: white;
+    background: #252525;
+    display: none;
+    opacity: 0.8;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
