--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/css/style2.css')
     script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js')
     script(type='text/javascript', src='/socket.io/socket.io.js')
-    script(type='text/javascript', src='/js/processing-1.4.1.min.js')
+    script(type='text/javascript', src='/js/processing-1.4.1.js')
     script(type='text/javascript', src='/js/underscore-min.js')
     script(type='text/javascript', src='/js/' + app_js + '.js')
   body!= body
