--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
     script(type='text/javascript', src='/js/processing-1.4.1.js')
     script(type='text/javascript', src='/js/underscore-min.js')
     script(type='text/javascript', src='/js/' + app_js + '.js')
-  body!= body
+  body
+    block content
